--- a/css/grey.css
+++ b/css/grey.css
@@ -14,11 +14,11 @@ margin-bottom:8px;
 
 
 body {
-background:#b7b7bc;
-color:#000!important;
-text-shadow:0px 0px 1px rgba(158,150,158,0.19), 0px 0px 0px rgba(50,58,50,0.07)!important;
-letter-spacing:normal!important;
-font-family:Times New Roman, serif!important;
+	background:#b7b7bc;
+	color:#000;
+	text-shadow:0px 0px 1px rgba(158,150,158,0.19), 0px 0px 0px rgba(50,58,50,0.07);
+	letter-spacing:normal;
+	font-family:Times New Roman, serif;
 }
 
 a.title {
