--- a/css/default.css
+++ b/css/default.css
@@ -50,6 +50,7 @@ font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 	text-align:center;
 	width: 500px;
 	margin: 0 auto;
+	font-weight: normal !important;
 }
 
 .content {
