--- a/css/grey.css
+++ b/css/grey.css
@@ -18,7 +18,7 @@ body {
 	color:#000;
 	/*text-shadow:0px 0px 1px rgba(158,150,158,0.19), 0px 0px 0px rgba(50,58,50,0.07);*/
 	letter-spacing:normal;
-	font-family:Times New Roman, serif;
+	/*font-family:Times New Roman, serif;*/
 }
 
 a.title {
